Release 3.5.4
=============

Bugs fixed
----------

- Better handling of timezone in :class:`rpy2.robjects.vectors.POSIXct`
  (issue #917).

- :mod:`pandas` conversion is now correctly handling R data frames with duplicated
  column names. They were dropped tbefore that (issue #925).

Changes
-------

- :func:`rpy2.robjects.methods.getclassdef` is now explicitly
  naming the optional argument with the R package name when calling
  the underlying R function.

- The `%R` line magic for ipython/jupyter was trying to substitute anything
  after a dolar (`$`) sign, which caused issue since this character is
  used to access by name elements in R containers. No substitution
  is happening anymore (issue #922).


Release 3.5.3
=============

Bugs fixed
----------

- Pandas converter no longer fails with arrays of `dtype`
  :class:`pandas.BoolDtype` or :class:`pandas.Float64Dtype`.(issue #880).

- Numpy and pandas conversion could fail an R object is a low-level wrapper
  for an R list (issue #890).

- Fixed detection of the R install path on Windows (issues #875 and #885).

- Fixed error with dynamic docstring generation for functions
  without arguments (issue #903).

- Fixed error with dynamic docstring generation when R functions
  are missing the section 'Details' (isue #902).


Release 3.5.2
=============

New features
------------

- The string representation for :class:`rpy2.robjects.conversion.Converter`
  objects lists classes the converter will dispatch on.

Bugs fixed
----------

- :meth:`rpy2.robjects.vectors.FactorVector.iter_labels` was failing if
  any element is NA (issue #879).

- The definition of converters was not thread-safe. The fix deprecates
  the use of :obj:`rpy2.robjects.conversion.converter` and replaces it
  with :func:`rpy2.robjects.conversion.get_conversion`.


Release 3.5.1
=============

Bugs fixed
----------

- Fix `__setitem__` on R list when the value is a simple Python object with
  a default low-level conversion (issue #864).
